tests/comp/sem/invalid/array_as_object.mj
class A {

	public int lol;

	public void test(A[][] foo) {
		/*** foo[0].lol; ***/
	}

	public static void main(String[] args) {
	}

}
